--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html {
+    scroll-behavior: smooth;
+}
+
+
+
 .highlight {
     background-color: yellow;
 }
@@ -23,6 +29,78 @@ top: 0;
 bottom: auto;
 transition: all 0.3s ease;
 width: 100%;
-z-index: 10;
+z-index: 100;
 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5)
+}
+
+.logoNav {
+    background-color: red;
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px; /* Adjust as needed */
+    background-color: white;
+}
+
+#navbar .flex.items-center {
+    align-items: center;
+}
+
+#navbar ul {
+    display: flex;
+    gap: 10px; /* Space between navigation links */
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#navbar a {
+    color: #333; /* Adjust color as needed */
+    text-decoration: none;
+    padding: 8px 12px;
+    border-radius: 4px;
+    transition: color 0.3s ease;
+}
+
+#navbar a:hover {
+    color: #3b82f6; /* Adjust accent color */
+}
+
+#searchInput {
+    /* border: 1px solid #ccc; */
+    border-radius: 10px;
+    padding: 8px;
+    outline: none;
+    width: 200px; /* Adjust width as needed */
+}
+
+.ri-search-line {
+    font-size: 18px;
+    color: #3b82f6; /* Adjust accent color */
+}
+
+
+
+#backToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Hidden by default */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+#backToTop.show {
+    display: block;
+    opacity: 1;
+}
+
+
+@media (max-width: 767px) {
+    #navbar {
+        display: none; /* Hide the desktop navbar */
+    }
 }
