--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,35 @@ width: 100%;
 z-index: 10;
 box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5)
 }
+
+.logo {
+    display: none;
+}
+
+.navbar-fixed .logo {
+    display: block;
+}
+
+/* Mengatur jarak antara logo dan menu */
+.navbar-fixed .logo {
+    margin-right: 20px; /* Sesuaikan jarak antara logo dan Beranda */
+}
+
+
+/* Atur ulang jarak antar item */
+ul {
+    display: flex;
+    align-items: center;
+    gap: 24px; /* Sesuaikan nilai ini untuk jarak antar item */
+}
+
+ul li {
+    margin: 0;
+}
+
+
+
+/* Pastikan item navigasi tetap rapi */
+ul li a {
+    padding: 0; /* Hilangkan padding default yang mungkin berlebihan */
+}
