--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     position: absolute;
     bottom: -86px;
     transition: all 0.3s ease;
+    z-index: 10;
 }
 
 .navbar-fixed {
@@ -30,36 +31,30 @@
 
 .logo {
     display: none;
+    margin-right: 2rem;
 }
 
 .navbar-fixed .logo {
     display: block;
 }
 
-/* Adjust spacing between logo and menu items */
-.logo {
-    margin-right: 2rem;
+.tema {
+    z-index: 999;
 }
 
-/* Adjust spacing between menu items */
+.mnav {
+    z-index: 99;
+}
+
 ul li:not(:last-child) a {
     margin-right: 1.5rem;
 }
 
-/* Ensure menu items are aligned properly */
 ul {
     display: flex;
     align-items: center;
 }
 
-.mnav,.navbar-default {
-    z-index: 999;
-    background-color: white;
-}
-
-
-
-/* Pastikan Hero Section tidak menutupi */
 .bg-hero {
     position: relative;
     z-index: 1;
